# web-demo

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  README.md  REUSE.toml  _typos.toml  deny.toml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  index.tsx
src/core-ui/: ComponentRenderer.tsx  ScreenRenderer.tsx
src/core-ui/components/: ActionListComponent.tsx  AvatarPreviewComponent.tsx  BannerComponent.tsx  CardPreviewComponent.tsx  ConfirmationDialogComponent.tsx  ContactListComponent.tsx  DividerComponent.tsx  DropdownComponent.tsx  EditableTextComponent.tsx  FieldListComponent.tsx  ImageCircleComponent.tsx  IndicatorComponent.tsx  InfoPanelComponent.tsx  InlineConfirmComponent.tsx  ListComponent.tsx  PinInputComponent.tsx  PreviewComponent.tsx  QrCodeComponent.tsx  RowComponent.tsx  SectionedActionListComponent.tsx  SettingsGroupComponent.tsx  SliderComponent.tsx  StatusIndicatorComponent.tsx  TextComponent.tsx  TextInputComponent.tsx  ToggleListComponent.tsx
src/styles/: app.css  tokens.css
src/types/: core.ts
src/wasm/: bridge.ts
tests/: smoke.test.ts
tests/playwright/: a11y.spec.ts  vrt.spec.ts
wasm/: Cargo.toml  deny.toml
wasm/src/: lib.rs
wasm/supply-chain/: config.toml
