# SPDX-FileCopyrightText: 2026 Mattia Egloff <mattia.egloff@pm.me>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "vauchi-wasm"
version = "0.5.0-rc.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WASM bindings for vauchi-core (web demo)"

[lib]
crate-type = ["cdylib"]

[dependencies]
vauchi-core = { git = "https://gitlab.com/vauchi/core.git", branch = "main", default-features = false }
wasm-bindgen = "0.2"
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
